--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,13 @@ repositories {
 }
 
 dependencies {
+
+	implementation('org.springframework.boot:spring-boot-starter-web') {
+		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+	}
+	implementation "org.springframework.boot:spring-boot-starter-jetty"
+
+
 	implementation 'org.springframework.boot:spring-boot-starter'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
